# WinsockChat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Client.cpp  Server.cpp  Socket.cpp
src/header/: Client.hpp  Server.hpp  Socket.hpp
